Couple optimizations to the code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ HTML main content.
           <div class="collapse navbar-collapse" id="collapsable-navbar">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <a href="/">Home</a>
+                <!-- No nav links right now -->
               </li>
             </ul>
           </div>  <!--/.navbar-collapse -->
